colang-cli/tests/samples/features/structs/compile_error/field_type_cycle_one_type.co
struct Foo {
  next: Foo;
}

fun main() { }
